[package]
name = "libcaesium-php"
version = "0.1.0"
edition = "2021"

[lib]
name = "caesiumphp"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false
doctest = false
bench = false
doc = false

[build-dependencies]
cc = "1.0"

[dependencies]
libcaesium = {git = "https://github.com/Lymphatus/libcaesium.git", rev =  "917a912"}
ext-php-rs = "0.10.0"