[package]
name = "libcaesium-php"
version = "0.1.1"
edition = "2021"

[lib]
name = "caesiumphp"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false
doctest = false
bench = false
doc = false

[build-dependencies]
cc = "1.0"

[dependencies]
libcaesium = {git = "https://github.com/Lymphatus/libcaesium.git", tag =  "0.12.0"}
ext-php-rs = "0.10.0"